force-app/main/default/objects/BLN_Glassline__c/BLN_Glassline__c.object-meta.xml
<CustomObject>
    <description>FOUK-3963 This Object is used in CTI.</description>
    <label>Glassline</label>
    <nameField>
        <label>Glassline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glasslines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>