force-app/main/default/objects/BLN_Glassline__c/fields/BLN_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>BLN_CompanyName__c</fullName>
    <description>FOUK-3963 This field is used in CTI to store Company Name.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>