force-app/main/default/objects/BLN_Glassline__c/fields/BLN_DNIS__c.field-meta.xml
<CustomField>
    <fullName>BLN_DNIS__c</fullName>
    <description>FOUK-3963 This field used for CTI to store DNIS Number.</description>
    <label>DNIS Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>