force-app/main/default/objects/BLN_Glassline__c/fields/BLN_GlasslineNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_GlasslineNumber__c</fullName>
    <description>FOUK-3963 This field used for CTI to store Glassline Number.</description>
    <label>Glassline Number</label>
    <type>Phone</type>
</CustomField>