force-app/main/default/objects/BLN_Glassline__c/listViews/BLN_All.listView-meta.xml
<ListView>
    <fullName>BLN_All</fullName>
    <columns>NAME</columns>
    <columns>BLN_CompanyName__c</columns>
    <columns>BLN_GlasslineNumber__c</columns>
    <columns>BLN_DNIS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>